<resources>
    <string name="app_name">Verdad o Reto</string>
    <string name="termino">Se acabo el tiempo</string>
    <string name="title_activity_publicidad">publicidad</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="title_activity_lauch">lauch</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_informacion">informacion</string>
    <string name="primero">Primero se debera elegir el modo de juego, ya sea en pareja o en grupo</string>
    <string name="segundo">Al elegir jugar en pareja solo podran jugar dos personas ya sea mujer-hombre, hombre-hombre ó mujer-mujer</string>
    <string name="tercero">Si eligen jugar en grupo, pueden jugar minimo 3 personas</string>
    <string name="cuarto">En la siguiente pantalla se debe elegir la intensidad del juego, el cual tiene 4 niveles de intensidad.</string>
    <string name="quinto">La intensidad suave y moderada esta recomendada para para el publico en general de cualquier edad.</string>
    <string name="sexto">la intensidad atrevida es recomendada para personas mayores a 16 años.</string>
    <string name="septimo">La intensidad sin limites es para personas mayores a 18 años.</string>
    <string name="octavo">Despues de elegir la intensidad debes agregar los nombres de las personas que jugara, dependiendo del modo elegido sera la cantidad de personas que podras agregar.</string>
    <string name="noveno">No olvides seleccionar el genero correcto de cada persona que agregues.</string>
    <string name="decimo">Ahora solo debes dar click en girar para elegir un nombre al azar y que la persona seleccionada elija si quiere cumplir un reto o confesar una verdad.</string>
</resources>
